# python-setup

./: .gitignore  .pre-commit-config.yaml  README.md  environment-setup.md  prac.py  pyproject.toml
prac/: prac.py  test_prac.py
